# reddit-mcp

./: Cargo.toml  README.md
src/: main.rs
src/reddit/: client.rs  models.rs
